<resources>
    <string name="app_name">SOS</string>
    <string name="password">Password…</string>
    <string name="log_in">Log In</string>
    <string name="new_user_register_here">Not an existing user? Register here</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="sos_map">SOS Map</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email…</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="please_enter_your_email_address_here">Please enter your email address here. . .</string>
    <string name="welcome_to_sos">Welcome to SOS</string>
    <string name="display_name">Display Name…</string>
    <string name="hi_there_this_is_a_custom_text">Hi, there! This is a custom text</string>
    <string name="displayname">DisplayName</string>
    <string name="change_image">change image</string>
    <string name="change_status">change status</string>
    <string name="user_default_status">user default status</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">send friend request</string>
    <string name="current_user_status">Current User Status</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="chat_btn">Chat</string>
    <string name="rewind">Rewind</string>
    <string name="instrument">Instrument</string>
    <string name="genre">Genre…</string>

    <string-array name="instruments">
        <item></item>
        <item>Bagpipes</item>
        <item>Bass</item>
        <item>Bass Guitar</item>
        <item>Bodhrán</item>
        <item>Bongo</item>
        <item>Cello</item>
        <item>Clarinet</item>
        <item>Drums</item>
        <item>Electric Guitar</item>
        <item>Guitar</item>
        <item>Harp</item>
        <item>Organ</item>
        <item>Piano</item>
        <item>Piccolo</item>
        <item>Producer</item>
        <item>Recorder</item>
        <item>Saxophone</item>
        <item>Tin Whistle</item>
        <item>Trumpet</item>
        <item>Tuba</item>
        <item>Uilleann Pipes</item>
        <item>Ukulele</item>
        <item>Viola</item>
        <item>Vilion</item>
        <item>Vocals</item>
        <item>Xylophone</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--string-array name="genres"> we probably won't need this
        <item>Acapella</item>
        <item>Acoustic</item>
        <item>Avante Garde</item>
        <item>Ballad</item>
        <item>Beatboxing</item>
        <item>Blues</item>
        <item>Cabaret</item>
        <item>Chillwave</item>
        <item>Country</item>
        <item>Deathcore</item>
        <item>Djent</item>
        <item>Dubstep</item>
        <item>Electro</item>
        <item>Emo</item>
        <item>Folka</item>
        <item>Funk</item>
        <item>Gospel</item>
        <item>Goth</item>
        <item>Hardcore</item>
        <item>Hip-Hop</item>
        <item>House</item>
        <item>Indie</item>
        <item>Irish(Traditional)</item>
        <item>Jazz</item>
        <item>Liquid</item>
        <item>Math Rock</item>
        <item>Metalcore</item>
        <item>Neo</item>
        <item>Nu</item>
        <item>Old-School Hip-Hop</item>
        <item>Opera</item>
        <item>Parody</item>
        <item>Pop</item>
        <item>Post</item>
        <item>Power Metal</item>
        <item>Progressive</item>
        <item>Punk</item>
    </string-array-->
</resources>
