<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?android:attr/colorFocusedHighlight"
    tools:context="com.example.sos.RegisterActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/create_account"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/ETdisplayname"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/display_name" />

    <EditText
        android:id="@+id/ETemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />
    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="Password" />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/TVSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/already_have_an_account_sign_in_here"
        android:textColor="#000000"
        android:textSize="15sp" />


</LinearLayout>